JSW Devsb/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blended_cement_potential_in_MT__c</fullName>
        <label>Blended cement potential in MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catgegory_A_potential_in_MT__c</fullName>
        <label>Catgegory A potential in MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Form__c</fullName>
        <label>Dealer Form Filled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enlistment_Status__c</fullName>
        <label>Enlistment Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Internal Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Demos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Demos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Volume_Committment_to_JSW__c</fullName>
        <label>Expected Volume Committment to JSW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Form_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Form Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Code__c</fullName>
        <label>Lead Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Response__c</fullName>
        <label>Lead Response</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May Be Interested</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MMC_Address__c</fullName>
        <label>MMC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_City__c</fullName>
        <label>MMC City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_Country__c</fullName>
        <label>MMC Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_District__c</fullName>
        <label>MMC District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_Name__c</fullName>
        <label>MMC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_Pin_Code__c</fullName>
        <label>MMC Pin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Sub_Dealers__c</fullName>
        <label>No of Sub Dealers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Visits__c</fullName>
        <label>No of Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <label>Total Counter Potential in MT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Lost__c</fullName>
        <label>Reason for Lost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Percentage__c</fullName>
        <label>Retail Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Address__c</fullName>
        <label>Sales Promoter Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_City__c</fullName>
        <label>Sales Promoter City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Country__c</fullName>
        <label>Sales Promoter Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_District__c</fullName>
        <label>Sales Promoter District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Name__c</fullName>
        <label>Sales Promoter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Pin_Code__c</fullName>
        <label>Sales Promoter Pin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Address__c</fullName>
        <label>Sub-Dealer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_City__c</fullName>
        <label>Sub-Dealer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Country__c</fullName>
        <label>Sub-Dealer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_District__c</fullName>
        <label>Sub-Dealer District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Name__c</fullName>
        <label>Sub-Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Pin_Code__c</fullName>
        <label>Sub-Dealer Pin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>SUb-Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Trade Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Promoters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middleman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Products__c</fullName>
        <label>Type of Products</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wholesale_Percentage__c</fullName>
        <label>Wholesale %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Reason_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Status , &apos;Unqualified&apos;) , ISBLANK( Reason_for_Lost__c ) )</errorConditionFormula>
        <errorDisplayField>Reason_for_Lost__c</errorDisplayField>
        <errorMessage>Please enter a reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( City, &apos;siddu&apos;)</errorConditionFormula>
        <errorMessage>test</errorMessage>
    </validationRules>
</CustomObject>